headers/sqlucode.h

#define SQLGetConnectAttr    SQLGetConnectAttrW
#define SQLGetCursorName    SQLGetCursorNameW
#define SQLGetDescField        SQLGetDescFieldW
#define SQLGetDescRec        SQLGetDescRecW
#define SQLGetDiagField        SQLGetDiagFieldW
#define SQLGetDiagRec        SQLGetDiagRecW
#define SQLPrepare        SQLPrepareW
#define SQLSetConnectAttr    SQLSetConnectAttrW
#define SQLSetCursorName    SQLSetCursorNameW
#define SQLSetDescField        SQLSetDescFieldW
#define SQLSetStmtAttr        SQLSetStmtAttrW
#define SQLGetStmtAttr        SQLGetStmtAttrW
#define SQLGetConnectOption    SQLGetConnectOptionW
#define SQLGetInfo        SQLGetInfoW
#define SQLGetTypeInfo        SQLGetTypeInfoW
#define SQLSetConnectOption    SQLSetConnectOptionW