headers/sql.h

SQLRETURN SQL_API SQLFreeEnv (
    SQLHENV          EnvironmentHandle);
SQLRETURN SQL_API SQLFreeHandle (
    SQLSMALLINT          HandleType,
    SQLHANDLE          Handle);
SQLRETURN SQL_API SQLFreeStmt (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      Option);
SQLRETURN SQL_API SQLGetData (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      ColumnNumber,
    SQLSMALLINT          TargetType,
    SQLPOINTER          TargetValue,
    SQLLEN          BufferLength,
    SQLLEN        * StrLen_or_Ind);
SQLRETURN SQL_API SQLGetEnvAttr (
    SQLHENV          EnvironmentHandle,
    SQLINTEGER          Attribute,
    SQLPOINTER          Value,
    SQLINTEGER          BufferLength,
    SQLINTEGER        * StringLength);
SQLRETURN SQL_API SQLGetFunctions (
    SQLHDBC        ConnectionHandle,
    SQLUSMALLINT    FunctionId,
    SQLUSMALLINT *    Supported);
SQLRETURN SQL_API SQLGetStmtOption (
    SQLHSTMT          StatementHandle,
    SQLUSMALLINT      Option,
    SQLPOINTER          Value);
SQLRETURN SQL_API SQLNumResultCols (
    SQLHSTMT          StatementHandle,
    SQLSMALLINT        * ColumnCount);
SQLRETURN SQL_API SQLParamData (
    SQLHSTMT          StatementHandle,
    SQLPOINTER        * Value);
SQLRETURN SQL_API SQLPutData (
    SQLHSTMT          StatementHandle,
    SQLPOINTER          Data,
    SQLLEN          StrLen_or_Ind);
SQLRETURN SQL_API SQLRowCount (
    SQLHSTMT          StatementHandle,
    SQLLEN        * RowCount);
SQLRETURN SQL_API SQLSetDescRec (
    SQLHDESC          DescriptorHandle,
    SQLSMALLINT          RecNumber,
    SQLSMALLINT          Type,
    SQLSMALLINT          SubType,
    SQLLEN          Length,
    SQLSMALLINT          Precision,
    SQLSMALLINT          Scale,
    SQLPOINTER          Data,
    SQLLEN        * StringLength,
    SQLLEN        * Indicator);
SQLRETURN SQL_API SQLSetEnvAttr (
    SQLHENV          EnvironmentHandle,
    SQLINTEGER          Attribute,
    SQLPOINTER          Value,
    SQLINTEGER          StringLength);