sql.py


        if hasattr(self.ODBC_DRIVER, "SQLFreeEnv"):
            self.ODBC_DRIVER.SQLFreeEnv.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLFreeEnv.argtypes = (self.SQLHENV,)
            self.SQLFreeEnv = self.ODBC_DRIVER.SQLFreeEnv
        else:
            self.SQLFreeEnv = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLFreeHandle"):
            self.ODBC_DRIVER.SQLFreeHandle.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLFreeHandle.argtypes = (self.SQLSMALLINT, self.SQLHANDLE,)
            self.SQLFreeHandle = self.ODBC_DRIVER.SQLFreeHandle
        else:
            self.SQLFreeHandle = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLFreeStmt"):
            self.ODBC_DRIVER.SQLFreeStmt.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLFreeStmt.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT,)
            self.SQLFreeStmt = self.ODBC_DRIVER.SQLFreeStmt
        else:
            self.SQLFreeStmt = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetConnectAttr"):
            self.ODBC_DRIVER.SQLGetConnectAttr.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetConnectAttr.argtypes = (self.SQLHDBC, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLGetConnectAttr = self.ODBC_DRIVER.SQLGetConnectAttr
        else:
            self.SQLGetConnectAttr = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetConnectOption"):
            self.ODBC_DRIVER.SQLGetConnectOption.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetConnectOption.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, self.SQLPOINTER,)
            self.SQLGetConnectOption = self.ODBC_DRIVER.SQLGetConnectOption
        else:
            self.SQLGetConnectOption = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetCursorName"):
            self.ODBC_DRIVER.SQLGetCursorName.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetCursorName.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetCursorName = self.ODBC_DRIVER.SQLGetCursorName
        else:
            self.SQLGetCursorName = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetData"):
            self.ODBC_DRIVER.SQLGetData.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetData.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLLEN, ctypes.POINTER(self.SQLLEN),)
            self.SQLGetData = self.ODBC_DRIVER.SQLGetData
        else:
            self.SQLGetData = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDescField"):
            self.ODBC_DRIVER.SQLGetDescField.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDescField.argtypes = (self.SQLHDESC, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLGetDescField = self.ODBC_DRIVER.SQLGetDescField
        else:
            self.SQLGetDescField = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDescRec"):
            self.ODBC_DRIVER.SQLGetDescRec.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDescRec.argtypes = (self.SQLHDESC, self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLLEN), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT), ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetDescRec = self.ODBC_DRIVER.SQLGetDescRec
        else:
            self.SQLGetDescRec = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDiagField"):
            self.ODBC_DRIVER.SQLGetDiagField.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDiagField.argtypes = (self.SQLSMALLINT, self.SQLHANDLE, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetDiagField = self.ODBC_DRIVER.SQLGetDiagField
        else:
            self.SQLGetDiagField = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetDiagRec"):
            self.ODBC_DRIVER.SQLGetDiagRec.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetDiagRec.argtypes = (self.SQLSMALLINT, self.SQLHANDLE, self.SQLSMALLINT, ctypes.POINTER(self.SQLCHAR), ctypes.POINTER(self.SQLINTEGER), ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetDiagRec = self.ODBC_DRIVER.SQLGetDiagRec
        else:
            self.SQLGetDiagRec = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetEnvAttr"):
            self.ODBC_DRIVER.SQLGetEnvAttr.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetEnvAttr.argtypes = (self.SQLHENV, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLGetEnvAttr = self.ODBC_DRIVER.SQLGetEnvAttr
        else:
            self.SQLGetEnvAttr = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetFunctions"):
            self.ODBC_DRIVER.SQLGetFunctions.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetFunctions.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, ctypes.POINTER(self.SQLUSMALLINT),)
            self.SQLGetFunctions = self.ODBC_DRIVER.SQLGetFunctions
        else:
            self.SQLGetFunctions = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetInfo"):
            self.ODBC_DRIVER.SQLGetInfo.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetInfo.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, self.SQLPOINTER, self.SQLSMALLINT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLGetInfo = self.ODBC_DRIVER.SQLGetInfo
        else:
            self.SQLGetInfo = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetStmtAttr"):
            self.ODBC_DRIVER.SQLGetStmtAttr.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetStmtAttr.argtypes = (self.SQLHSTMT, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER, ctypes.POINTER(self.SQLINTEGER),)
            self.SQLGetStmtAttr = self.ODBC_DRIVER.SQLGetStmtAttr
        else:
            self.SQLGetStmtAttr = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetStmtOption"):
            self.ODBC_DRIVER.SQLGetStmtOption.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetStmtOption.argtypes = (self.SQLHSTMT, self.SQLUSMALLINT, self.SQLPOINTER,)
            self.SQLGetStmtOption = self.ODBC_DRIVER.SQLGetStmtOption
        else:
            self.SQLGetStmtOption = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLGetTypeInfo"):
            self.ODBC_DRIVER.SQLGetTypeInfo.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLGetTypeInfo.argtypes = (self.SQLHSTMT, self.SQLSMALLINT,)
            self.SQLGetTypeInfo = self.ODBC_DRIVER.SQLGetTypeInfo
        else:
            self.SQLGetTypeInfo = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLNumResultCols"):
            self.ODBC_DRIVER.SQLNumResultCols.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLNumResultCols.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLSMALLINT),)
            self.SQLNumResultCols = self.ODBC_DRIVER.SQLNumResultCols
        else:
            self.SQLNumResultCols = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLParamData"):
            self.ODBC_DRIVER.SQLParamData.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLParamData.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLPOINTER),)
            self.SQLParamData = self.ODBC_DRIVER.SQLParamData
        else:
            self.SQLParamData = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLPrepare"):
            self.ODBC_DRIVER.SQLPrepare.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLPrepare.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLINTEGER,)
            self.SQLPrepare = self.ODBC_DRIVER.SQLPrepare
        else:
            self.SQLPrepare = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLPutData"):
            self.ODBC_DRIVER.SQLPutData.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLPutData.argtypes = (self.SQLHSTMT, self.SQLPOINTER, self.SQLLEN,)
            self.SQLPutData = self.ODBC_DRIVER.SQLPutData
        else:
            self.SQLPutData = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLRowCount"):
            self.ODBC_DRIVER.SQLRowCount.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLRowCount.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLLEN),)
            self.SQLRowCount = self.ODBC_DRIVER.SQLRowCount
        else:
            self.SQLRowCount = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetConnectAttr"):
            self.ODBC_DRIVER.SQLSetConnectAttr.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetConnectAttr.argtypes = (self.SQLHDBC, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER,)
            self.SQLSetConnectAttr = self.ODBC_DRIVER.SQLSetConnectAttr
        else:
            self.SQLSetConnectAttr = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetConnectOption"):
            self.ODBC_DRIVER.SQLSetConnectOption.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetConnectOption.argtypes = (self.SQLHDBC, self.SQLUSMALLINT, self.SQLULEN,)
            self.SQLSetConnectOption = self.ODBC_DRIVER.SQLSetConnectOption
        else:
            self.SQLSetConnectOption = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetCursorName"):
            self.ODBC_DRIVER.SQLSetCursorName.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetCursorName.argtypes = (self.SQLHSTMT, ctypes.POINTER(self.SQLCHAR), self.SQLSMALLINT,)
            self.SQLSetCursorName = self.ODBC_DRIVER.SQLSetCursorName
        else:
            self.SQLSetCursorName = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetDescField"):
            self.ODBC_DRIVER.SQLSetDescField.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetDescField.argtypes = (self.SQLHDESC, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, self.SQLINTEGER,)
            self.SQLSetDescField = self.ODBC_DRIVER.SQLSetDescField
        else:
            self.SQLSetDescField = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetDescRec"):
            self.ODBC_DRIVER.SQLSetDescRec.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetDescRec.argtypes = (self.SQLHDESC, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLLEN, self.SQLSMALLINT, self.SQLSMALLINT, self.SQLPOINTER, ctypes.POINTER(self.SQLLEN), ctypes.POINTER(self.SQLLEN),)
            self.SQLSetDescRec = self.ODBC_DRIVER.SQLSetDescRec
        else:
            self.SQLSetDescRec = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetEnvAttr"):
            self.ODBC_DRIVER.SQLSetEnvAttr.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetEnvAttr.argtypes = (self.SQLHENV, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER,)
            self.SQLSetEnvAttr = self.ODBC_DRIVER.SQLSetEnvAttr
        else:
            self.SQLSetEnvAttr = self.UnimplementedSQLFunction

        if hasattr(self.ODBC_DRIVER, "SQLSetStmtAttr"):
            self.ODBC_DRIVER.SQLSetStmtAttr.restype = self.SQLRETURN
            self.ODBC_DRIVER.SQLSetStmtAttr.argtypes = (self.SQLHSTMT, self.SQLINTEGER, self.SQLPOINTER, self.SQLINTEGER,)
            self.SQLSetStmtAttr = self.ODBC_DRIVER.SQLSetStmtAttr
        else:
            self.SQLSetStmtAttr = self.UnimplementedSQLFunction
